# ARMR

./: .gitignore  .gitmodules  README.md
rad_source_sim/: CMakeLists.txt  jackal.launch  package.xml
radbot_control/: CMakeLists.txt  costmap_plugins.xml  package.xml
radbot_exploration/: CMakeLists.txt  LICENSE  package.xml
radbot_processor/: CMakeLists.txt  data.csv  data_i3.csv  data_i4.csv  data_o1.csv  datawval.csv  package.xml
radbot_src_sim/: CMakeLists.txt  package.xml  (+1 more)
radbot_viz/: CMakeLists.txt  package.xml
radbot_viz/launch/: view_radbot.launch
radbot_viz/rviz/: radbot.rviz
radbotlive/: CMakeLists.txt  package.xml
radbotlive/launch/: RadbotMasterLaunchFile.launch  amcl.launch  base_local_planner_params_DWA.yaml  frontier_exploration.launch  frontier_exploration_outdoor.launch  gmapping.launch  gmapping_outdoor.launch  jackal.machine  local_costmap_params.yaml  navigation-pioneer-3dx.launch  pioneerMasterLaunchFile.launch  radbot_exploration_outdoor.launch  sicklms.launch  sim.machine  tf_base_link_to_laser.launch
radbotlive/launch/nav/: amcl.launch  base_local_planner_params.yaml  costmap_common_params.yaml  gmapping.launch  move_base.launch  move_base_params.yaml
radbotlive/launch/nav/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
radbotlive/launch/nav_outdoor/: base_local_planner_params.yaml  costmap_common_params.yaml  gmapping.launch  gps_integration (copy).launch  gps_integration.launch  gps_transform.launch  move_base.launch  move_base_params.yaml
radbotlive/launch/nav_outdoor/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
(+35 files in other folders)
